--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ section {
 }
 
 .btn-primary {
-  background-color: #4CAF50;
+  background-color: #066e4f;
 }
 
 .btn-secondary {
-  background-color: #008CBA;
+  background-color: #d8d4d4;
 }
 
 .btn-warning {
