--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -1,9 +1,3 @@
-.welcome-message {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
 .dashboard-wrapper {
   display: flex;
   flex-direction: column;
@@ -13,10 +7,13 @@
 }
 
 .dashboard-container {
+  display: flex;
   width: 100%;
   max-width: 800px;
   padding-top: 20px;
   box-sizing: border-box;
+
+  flex-direction: column;
 }
 
 .header {
@@ -45,7 +42,7 @@
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
-  margin-left: auto;
+  margin-left: 200px;
 }
 
 .logout-button:hover {
@@ -59,6 +56,9 @@
   box-sizing: border-box;
 }
 
+.dashboard-content h3 {
+  font-weight: bold;
+}
 .dashboard-grid {
   display: flex;
   flex-direction: column;
