updated css form

--- a/Gestionale-Proyect/src/components/RegisterCompany.css
+++ b/Gestionale-Proyect/src/components/RegisterCompany.css
@@ -6,6 +6,19 @@
   height: 100vh;
 }
 
+.container {
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 400px;
+  max-width: 100%;
+}
+
+.logo img {
+  width: 100%;
+}
+
 .form {
   display: flex;
   flex-direction: column;
