--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -8,17 +8,17 @@
   height: 100vh;
 }
 
-.container {
+.container-employee {
   background: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 90%; /* Adjusted to be responsive */
+  width: 90%; /* Adjusted to be responsive*/
   max-width: 800px; /* Adjusted to fit larger screens */
   display: flex;
   flex-direction: column;
 }
-.container h3 {
+.container-employee h3 {
   font-weight: bold;
 }
 
