--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -4,6 +4,12 @@
   align-items: center;
   width: 100%;
   box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 488px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .dashboard-container {
@@ -11,6 +17,7 @@
   max-width: 800px;
   padding-top: 20px;
   box-sizing: border-box;
+  flex-direction: column;
 }
 
 .header {
@@ -19,12 +26,24 @@
   color: white;
   padding: 10px 20px;
   box-sizing: border-box;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+
+.header h1 {
+  flex-grow: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 .logout-button {
@@ -34,6 +53,7 @@
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .logout-button:hover {
@@ -45,6 +65,10 @@
   padding: 20px;
   width: 100%;
   box-sizing: border-box;
+}
+
+.dashboard-content h3 {
+  font-weight: bold;
 }
 
 .dashboard-grid {
@@ -81,8 +105,68 @@
   font-weight: bold;
 }
 
-@media (min-width: 600px) {
-  .dashboard-grid {
+.footer {
+  background-color: #007bff;
+  color: white;
+  box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 488px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.footer a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer a span {
+  display: block;
+  font-size: 12px;
+}
+
+.footer i {
+  font-size: 18px;
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+  .header-container {
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logout-button {
+    margin-left: 10px;
+  }
+
+  .statistics,
+  .user-list {
+    padding: 10px;
+  }
+
+  .dashboard-content {
+    padding: 10px;
+  }
+
+  .header h1 {
+    font-size: 1.2rem;
+  }
+
+  .footer {
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  .footer a {
+    flex: 1;
   }
 }
