--- a/Gestionale-Proyect/src/components/LeaveRequestsList.css
+++ b/Gestionale-Proyect/src/components/LeaveRequestsList.css
@@ -1,5 +1,3 @@
-/* LeaveRequestsList.css */
-
 .leave-requests-list {
   background-color: #fff;
   border-radius: 8px;
@@ -27,16 +25,16 @@
 
 .approve-button,
 .deny-button {
-  background-color: #007bff; /* Colore di sfondo blu */
+  background-color: #007bff;
   color: white;
   border: none;
   padding: 5px 10px;
-  border-radius: 8px; /* Angoli smussati */
+  border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .approve-button:hover,
 .deny-button:hover {
-  background-color: #0056b3; /* Colore di sfondo blu scuro al passaggio del mouse */
+  background-color: #0056b3;
 }
