--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -232,8 +232,9 @@
 
 .select-field {
   width: 100%;
+  max-width: 300px;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 2rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   appearance: none;
