--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -201,13 +201,14 @@
   z-index: 1000;
 }
 
-.select-field option {
+.select-field {
+  width: 100%;
   max-width: 300px;
   padding: 0.5rem;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: white;
+  appearance: none;
 }
 
 @media (max-width: 600px) {
