--- a/Gestionale-Proyect/src/components/RequestLeaveForm.css
+++ b/Gestionale-Proyect/src/components/RequestLeaveForm.css
@@ -26,8 +26,8 @@
 }
 
 .select-field {
-  width: 100%;
-  max-width: 100%;
+  width: 300px;
+  max-width: 300px;
   padding: 0.5rem;
   font-size: 1rem;
   border: 1px solid #ccc;
