--- a/Gestionale-Proyect/src/components/RequestLeaveForm.css
+++ b/Gestionale-Proyect/src/components/RequestLeaveForm.css
@@ -1,3 +1,9 @@
+.request-leave-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .input-field {
   width: 100%;
   padding: 10px;
@@ -9,8 +15,36 @@
 }
 
 .textarea-field {
-  background-color: #fff;
-  color: #000;
+  width: 100%;
+  max-width: 300px;
+  height: 100px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  box-sizing: border-box;
+}
+
+.select-field {
+  width: 100%;
+  max-width: 300px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  appearance: none;
+  box-sizing: border-box;
+}
+
+.select-field option {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
 }
 
 .submit-button {
