--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -1,14 +1,37 @@
-/* src/components/EmployeeDashboard.css */
+.w body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-.container-employee {
-  background: #f8f9fa;
+/* .container-employee {
+  background: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 90%;
-  max-width: 1200px;
-  margin: 20px auto;
-  padding: 20px;
+  width: 90%; /* Adjusted to be responsive
+  max-width: 800px; /* Adjusted to fit larger screens 
+  display: flex;
+  flex-direction: column;
+} */
+
+.container-employee {
+  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 488px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: inline-grid;
+}
+
+.container-employee h3 {
+  font-weight: bold;
 }
 
 .header {
@@ -19,7 +42,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 8px;
 }
 
 .header i {
@@ -34,6 +56,7 @@
 .content {
   padding: 20px;
   flex: 1;
+  overflow-y: auto;
 }
 
 .card {
@@ -70,7 +93,7 @@
 
 .summary-item span:last-child {
   display: block;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: bold;
   color: #333;
 }
