--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -1,6 +1,5 @@
 .dashboard-wrapper {
   display: flex;
-
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -87,8 +86,9 @@
   overflow-y: auto;
 }
 
-.dashboard-content h3 {
+.dashboard-content h2 {
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .dashboard-grid {
@@ -104,6 +104,16 @@
   padding: 20px;
   border-radius: 8px;
   box-sizing: border-box;
+}
+
+.statistics h2 {
+  color: #007bff;
+  font-weight: bold;
+}
+
+.user-list h2 {
+  color: #007bff;
+  font-weight: bold;
 }
 
 .user-list ul {
@@ -123,6 +133,30 @@
 
 .user-name {
   font-weight: bold;
+}
+.card {
+  margin-top: 20px;
+}
+
+.card h2 {
+  color: #007bff;
+  font-weight: bold;
+}
+.hours-edit {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hours-edit button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  border: 1px solid #007bff;
+  background-color: white;
+  color: #007bff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .footer {
@@ -154,21 +188,15 @@
   font-size: 12px;
 }
 
-
 .footer i {
   font-size: 18px;
 }
-
 
 @media (max-width: 600px) {
   .header-container {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-  }
-
-  .logout-button {
-    margin-left: 10px;
   }
 
   .statistics,
