--- a/Gestionale-Proyect/src/components/EditEmployee.css
+++ b/Gestionale-Proyect/src/components/EditEmployee.css
@@ -27,6 +27,10 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+.edit-popup input[readonly] {
+  background-color: #e9ecef;
+  cursor: not-allowed;
+}
 
 .edit-popup button {
   margin-right: 10px;
