--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -8,17 +8,6 @@
   height: 100vh;
 }
 
-/* .container-employee {
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  width: 90%; /* Adjusted to be responsive
-  max-width: 800px; /* Adjusted to fit larger screens 
-  display: flex;
-  flex-direction: column;
-} */
-
 .container-employee {
   height: 100vh;
   position: fixed;
@@ -60,9 +49,8 @@
 }
 
 .card {
-  background: white;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   padding: 20px;
 }
@@ -71,6 +59,7 @@
 .card h3 {
   font-size: 20px;
   margin-bottom: 10px;
+  color: #007bff;
 }
 
 .grid {
