--- a/Gestionale-Proyect/src/components/LeaveRequestsList.css
+++ b/Gestionale-Proyect/src/components/LeaveRequestsList.css
@@ -2,6 +2,10 @@
   margin-top: 20px;
 }
 
+#notification {
+  color: #007bff;
+}
+
 .request-item {
   padding: 10px;
   border-bottom: 1px solid #ccc;
