--- a/Gestionale-Proyect/src/components/EmployeeDashboard.css
+++ b/Gestionale-Proyect/src/components/EmployeeDashboard.css
@@ -77,7 +77,7 @@
 .summary-item span:first-child {
   display: block;
   font-size: 12px;
-  color: #666;
+  color: white;
 }
 
 .summary-item span:last-child {
