--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -161,7 +161,8 @@
 
 .statistics,
 .user-list,
-.on-duty-workers {
+.on-duty-workers,
+.history {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
