--- a/Gestionale-Proyect/src/components/ManagePaySlips.css
+++ b/Gestionale-Proyect/src/components/ManagePaySlips.css
@@ -19,7 +19,7 @@
   border-radius: 4px;
   width: 100%;
   box-sizing: border-box;
-  margin-bottom: 10px; /* Aggiungi margine tra i campi */
+  margin-bottom: 10px;
 }
 
 .add-button {
@@ -31,7 +31,7 @@
   cursor: pointer;
   font-size: 16px;
   width: 100%;
-  margin-bottom: 10px; /* Aggiungi margine tra i pulsanti */
+  margin-bottom: 10px;
 }
 
 .add-button:hover {
